build_errors.txt
   Compiling swift_run v0.1.0 (C:\Users\HamidR\Documents\swift_run)
error[E0308]: mismatched types
   --> src\main.rs:423:78
    |
423 |                     let _ = RegSetValueExW(h_key, w!("SwiftRun"), 0, REG_SZ, data);
    |                             --------------                                   ^^^^ expected `Option<&[u8]>`, found `&[u8]`
    |                             |
    |                             arguments to this function are incorrect
    |
    = note:   expected enum `Option<&[u8]>`
            found reference `&[u8]`
note: function defined here
   --> C:\Users\HamidR\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows-0.48.0\src\Windows\Win32\System\Registry\mod.rs:898:15
    |
898 | pub unsafe fn RegSetValueExW<P0, P1>(hkey: P0, lpvaluename: P1, reserved: u32, dwtype: REG_VALUE_TYPE, lpdata: ::core::option::Option<&[u...
    |               ^^^^^^^^^^^^^^
help: try wrapping the expression in `Some`
    |
423 |                     let _ = RegSetValueExW(h_key, w!("SwiftRun"), 0, REG_SZ, Some(data));
    |                                                                              +++++    +

error[E0308]: mismatched types
   --> src\main.rs:474:72
    |
474 |                     let _ = RegSetValueExW(h_key, val_name, 0, REG_SZ, data_slice);
    |                             --------------                             ^^^^^^^^^^ expected `Option<&[u8]>`, found `&[u8]`
    |                             |
    |                             arguments to this function are incorrect
    |
    = note:   expected enum `Option<&[u8]>`
            found reference `&[u8]`
note: function defined here
   --> C:\Users\HamidR\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows-0.48.0\src\Windows\Win32\System\Registry\mod.rs:898:15
    |
898 | pub unsafe fn RegSetValueExW<P0, P1>(hkey: P0, lpvaluename: P1, reserved: u32, dwtype: REG_VALUE_TYPE, lpdata: ::core::option::Option<&[u...
    |               ^^^^^^^^^^^^^^
help: try wrapping the expression in `Some`
    |
474 |                     let _ = RegSetValueExW(h_key, val_name, 0, REG_SZ, Some(data_slice));
    |                                                                        +++++          +

error[E0308]: mismatched types
   --> src\main.rs:503:80
    |
503 | ...                   let _ = RegSetValueExW(h_key, val_name, 0, REG_SZ, data_slice);
    |                               --------------                             ^^^^^^^^^^ expected `Option<&[u8]>`, found `&[u8]`
    |                               |
    |                               arguments to this function are incorrect
    |
    = note:   expected enum `Option<&[u8]>`
            found reference `&[u8]`
note: function defined here
   --> C:\Users\HamidR\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows-0.48.0\src\Windows\Win32\System\Registry\mod.rs:898:15
    |
898 | pub unsafe fn RegSetValueExW<P0, P1>(hkey: P0, lpvaluename: P1, reserved: u32, dwtype: REG_VALUE_TYPE, lpdata: ::core::option::Option<&[u...
    |               ^^^^^^^^^^^^^^
help: try wrapping the expression in `Some`
    |
503 |                             let _ = RegSetValueExW(h_key, val_name, 0, REG_SZ, Some(data_slice));
    |                                                                                +++++          +

For more information about this error, try `rustc --explain E0308`.
error: could not compile `swift_run` (bin "swift_run") due to 3 previous errors
